# Agentic-Ai-Decision-System

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FINAL_AUDIT_REPORT.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  skills-lock.json
.codebase-memory/: artifact.json  graph.db.zst
.github/: pull_request_template.md
company_data/: manifest.json
company_docs/: billing.md  demo_billing.md
docs/: ARCHITECTURE.md  BETA_FEEDBACK_AUDIT.md  BETA_PACKAGING_AUDIT.md  BETA_RELEASE_NOTES.md  BETA_REVIEWER_GUIDE.md  BUG_BASH_CHECKLIST.md  COMMENTING_GUIDE.md  CONNECTOR_AUDIT.md  CONNECTOR_RELIABILITY_AUDIT.md  CONNECTOR_SECURITY_REVIEW.md  CURRENT_STATE.md  DATASETS.md  DECISIONS.md  DEMO_PATH.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT.md  DEVELOPMENT.md  DEVELOPMENT_LOG.md  ENTERPRISE_READINESS.md  EXAMPLE_ISSUES.md  FINAL_AUDIT_REPORT.md  FRONTEND_SURFACE_AUDIT.md  GETTING_STARTED.md  GRAPH_INTELLIGENCE_AUDIT.md  HUMAN_APPROVAL_WORKFLOW.md  IMPLEMENTATION_REPORT.md  ISSUE_TRIAGE.md  KNOWN_LIMITATIONS.md  LOCAL_FIRST_SETUP.md  MIGRATION_GUIDE.md  NVIDIA_NIM.md  OLLAMA.md  OVERVIEW.md  PRODUCT_VISION.md  PROJECT_AUDIT_REPORT.md  PUBLIC_BETA_RELEASE_CANDIDATE.md  RELEASE_CHECKLIST.md  SECURITY_MODEL.md  THREAT_MODEL.md  TROUBLESHOOTING.md  (+1 more)
scripts/: backup-local-data.sh  build-v1.2-security.sh  clean-generated.ps1  clean-generated.sh  collect-diagnostics.sh  dev.ps1  dev.sh  doctor-local.sh  e2e-local-demo-smoke.sh  local-demo-seed.sh  local-smoke-test.sh  release-check.ps1  release-check.sh  reset-local-data.sh  setup-local.sh  start-local.sh  stop-local.sh  sync-v0.7.2.sh  test-persistence-restart.sh  validate-local.sh
tests/: conftest.py  test_api.py  test_api_connector.py  test_audit_api.py  test_chunker.py  test_claim_ledger.py  test_cli.py  test_config.py  test_connector_cli.py  test_connector_evidence_bridge.py  test_connector_reliability.py  (+40 more)
(+620 files in other folders)
