[build-system]
requires = ["hatchling>=1.26,<2.0"]
build-backend = "hatchling.build"

[project]
name = "agentic-decision-system"
version = "0.1.0"
description = "Backend-first agentic decision brief prototype with LangGraph, Chroma, RAG, and a claim ledger."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=1.0,<2.0",
  "langchain>=1.0,<2.0",
  "langchain-core>=1.0,<2.0",
  "chromadb>=0.5,<2.0",
  "pydantic>=2.8,<3.0",
  "typer>=0.12,<1.0",
  "python-dotenv>=1.0,<2.0",
  "rich>=13.7,<15.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0"
]

[project.scripts]
decision-system = "decision_system.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/decision_system"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
