[build-system]
requires = ["hatchling>=1.26,<2.0"]
build-backend = "hatchling.build"

[project]
name = "agentic-decision-system"
 version = "1.19.0-dev"
description = "Backend-first agentic decision brief prototype with LangGraph, Chroma, RAG, and a claim ledger."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "langgraph>=1.0,<2.0",
  "chromadb>=0.5,<2.0",
  "pydantic>=2.8,<3.0",
  "typer>=0.12,<1.0",
  "python-dotenv>=1.0,<2.0",
  "rich>=13.7,<15.0",
  "uvicorn>=0.30,<1.0",
  "xlrd>=2.0,<3.0",
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "pytest-httpx>=0.30,<1.0",
]

[project.scripts]
decision-system = "decision_system.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/decision_system"]

[tool.hatch.build]
include = [
    "src/decision_system/web/**/*",
    "src/decision_system/web/mock-data/**/*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
